src/types/tests/snapshots/tgbot__types__tests__business__get_business_account_gifts.snap
---
source: src/types/tests/business.rs
expression: actual_data
---
{
  "business_connection_id": "id"
}
