src/types/tests/snapshots/tgbot__types__tests__business__post_story-2.snap
---
source: src/types/tests/business.rs
expression: actual_data
---
{
  "active_period": 60,
  "areas": [
    {
      "position": {
        "corner_radius_percentage": 1.0,
        "height_percentage": 2.0,
        "rotation_angle": 3.0,
        "width_percentage": 4.0,
        "x_percentage": 5.0,
        "y_percentage": 6.0
      },
      "type": {
        "type": "link",
        "url": "url"
      }
    }
  ],
  "business_connection_id": "id",
  "caption": "test",
  "caption_entities": [
    {
      "length": 2,
      "offset": 0,
      "type": "bold"
    }
  ],
  "content": {
    "photo": "url",
    "type": "photo"
  },
  "post_to_chat_page": true,
  "protect_content": true
}
