src/types/tests/snapshots/tgbot__types__tests__business__post_story.snap
---
source: src/types/tests/business.rs
expression: actual_data
---
{
  "active_period": "60",
  "business_connection_id": "id",
  "content": {
    "photo": "url",
    "type": "photo"
  }
}
