src/types/tests/snapshots/tgbot__types__tests__business__read_business_message.snap
---
source: src/types/tests/business.rs
expression: actual_data
---
{
  "business_connection_id": "id",
  "chat_id": 1,
  "message_id": 2
}
