src/types/tests/snapshots/tgbot__types__tests__business__set_business_account_gift_settings.snap
---
source: src/types/tests/business.rs
expression: actual_data
---
{
  "accepted_gift_types": {
    "gifts_from_channels": false,
    "limited_gifts": false,
    "premium_subscription": false,
    "unique_gifts": false,
    "unlimited_gifts": false
  },
  "business_connection_id": "id",
  "show_gift_button": true
}
