src/types/tests/snapshots/tgbot__types__tests__business__set_business_account_name.snap
---
source: src/types/tests/business.rs
expression: actual_data
---
{
  "business_connection_id": "id",
  "first_name": "John"
}
