src/types/tests/snapshots/tgbot__types__tests__business__set_business_account_profile_photo-2.snap
---
source: src/types/tests/business.rs
expression: actual_data
---
{
  "business_connection_id": "id",
  "is_public": "true",
  "photo": {
    "photo": "test",
    "type": "static"
  }
}
